second commit demo

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="{% url 'search'%}">Search</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Player</a>
+                <a class="nav-link" href="{% url 'player' %}">Player</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Log Out</a>
